Run tests as config.authType = 'testrun'

--- a/schemas/schemas/serverConfig.json
+++ b/schemas/schemas/serverConfig.json
@@ -42,7 +42,8 @@
                 "none",
                 "x-auth",
                 "eppn",
-                "x-trust-auth"
+                "x-trust-auth",
+                "testrun"
             ]
         },
         "serverType": {
