Reverting to master

--- a/schemas/schemas/serverConfig.json
+++ b/schemas/schemas/serverConfig.json
@@ -42,8 +42,7 @@
                 "none",
                 "x-auth",
                 "eppn",
-                "x-trust-auth",
-                "testrun"
+                "x-trust-auth"
             ]
         },
         "serverType": {
